# star_knight

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: game_loop.cpp  game_loop.h  main.cpp
src/defines/: sk_global_defines.h
src/models/: CMakeLists.txt  sk_mesh.cpp  sk_mesh.h  sk_mesh_instance.cpp  sk_mesh_instance.h  sk_mesh_primitive.cpp  sk_mesh_primitive.h  sk_parser.cpp  sk_parser.h
src/renderer/: CMakeLists.txt  initializer.cpp  initializer.h  transformation_manager.cpp  transformation_manager.h
src/shaders/: CMakeLists.txt  shader_manager.cpp  shader_manager.h
src/shaders/fragment/: CMakeLists.txt
src/shaders/vertex/: CMakeLists.txt  vs_simple.sc
src/window_and_user/: CMakeLists.txt  sk_window.cpp  sk_window.h
